[package]
name = "rune_cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
inkwell = { version = "0.6.0", features = ["llvm18-1"] }
owo-colors = "4.2.2"
rune_core = { workspace = true }
rune_parser = { workspace = true }
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.23"
